--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hiking Landing Page</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="Images/logo.png" />
   </head>
   <body>
     <div class="page1">
       <div class="navbar">
         <div class="icon">
-          <img src="logo.png" alt="Logo" class="logo" />
+          <img src="images/logo.png" alt="Logo" class="logo" />
           <h2>Camps</h2>
         </div>
 
@@ -32,7 +32,8 @@
         <h4>mountain hiking society</h4>
         <h1>Explore The World <br />with Exciting People</h1>
         <p class="par">
-          We envision a world where everyone feels welcome in the American <br />
+          We envision a world where everyone feels welcome in the American
+          <br />
           hiking community and has permanent access to meaningful hiking.
         </p>
 
@@ -40,7 +41,7 @@
         <button class="btn2"><a href="#"></a>Learn More</button>
 
         <div class="box">
-          <div class="box1">
+          <div class="bx1">
             <div class="title">
               <h2>01</h2>
               <h3>Choose Place Activity and Time</h3>
@@ -51,7 +52,7 @@
             </p>
           </div>
 
-          <div class="box2">
+          <div class="bx2">
             <div class="title">
               <h2>02</h2>
               <h3>Find People With The Same Ideas</h3>
@@ -62,7 +63,7 @@
             </p>
           </div>
 
-          <div class="box3">
+          <div class="bx3">
             <div class="title">
               <h2>03</h2>
               <h3>Start Chat And Ask Them To Go</h3>
@@ -71,6 +72,137 @@
               Make Friends. Make Memories. Make a Difference. Volunteer trail
               stewardship.
             </p>
+          </div>
+        </div>
+      </div>
+      <div class="content2">
+        <div class="title1">
+          <h4>JUST FOR YOU</h4>
+          <h2>Our Mission</h2>
+        </div>
+
+        <p class="par">
+          We has plenty of perks nice views, fresh air <br />
+          and the sounds and smells of nature.
+        </p>
+
+        <div class="box2">
+          <div class="bx1">
+            <div class="title">
+              <img src="images/icon1.png" alt="icon1" />
+              <h3>Start Slow</h3>
+            </div>
+            <p class="par">
+              A short, local hike is best for beginners. Gradually work up to
+              trails with hills or uneven terrain.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+
+          <div class="bx2">
+            <div class="title">
+              <img src="images/icon2.png" alt="icon2" />
+
+              <h3>Use Poles</h3>
+            </div>
+            <p class="par">
+              Digging into the ground and propelling yourself forward pushes
+              your upper body muscles to work.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+
+          <div class="bx3">
+            <div class="title">
+              <img src="images/icon3.png" alt="icon3" />
+
+              <h3>Bump It Up</h3>
+            </div>
+            <p class="par">
+              neven terrain can work muscles while improving balance and
+              stability.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="section">
+        <div class="image">
+          <img src="images/people.png" alt="image1" />
+        </div>
+        <div class="title">
+          <h4>WE HAVE FUN</h4>
+          <h2>Alternative Breaks</h2>
+          <p class="par">
+            Make Friends. Make Memories. Make a Difference. Volunteer trail
+            stewardship projects in America`s parks and forests designed
+            specifically for college student groups and young professionals.
+            Part volunteer work project, part kick-back outdoor vacation.
+            <br /><br />
+            Make Friends. Make Memories. Make a Difference. Volunteer trail
+            stewardship projects in America`s parks and forests.
+          </p>
+          <button class="btn"><a href="#">Learn More</a></button>
+        </div>
+      </div>
+
+      <div class="section2">
+        <div class="title">
+          <h4>WHATS NEXT?</h4>
+          <h2>Explore Mountain</h2>
+          <p class="par">
+            Make Friends. Make Memories. Make a Difference. Volunteer <br />
+            trail stewardship projects in America`s parks and forests <br />
+            designed specifically for college student groups and young
+            <br />professionals. Part volunteer work project, part kick-back
+            <br />
+            outdoor vacation. <br /><br />
+            Make Friends. Make Memories. Make a Difference. Volunteer <br />
+            trail stewardship projects in America`s parks and forests.
+          </p>
+          <button class="btn"><a href="#">Learn More</a></button>
+        </div>
+
+        <div class="image1">
+          <img src="images/people2.png" alt="image2" />
+        </div>
+      </div>
+
+      <div class="section3">
+        <div class="title">
+          <h4>WHERE TO GO?</h4>
+          <h2>Explore Mountain</h2>
+          <p class="par">
+            While we can customize your plan to suit your <br />needs, most
+            clients schedule regular services:
+          </p>
+        </div>
+
+        <div class="images">
+          <div class="im1">
+            <img src="images/card1.png" alt="image1" />
+            <h5>Mount Everest</h5>
+            <img id="spec" src="images/specification.png" alt="specification" />
+            <p>$12,999<span>/person</span></p>
+          </div>
+          <div class="im2">
+            <img src="images/card2.png" alt="image2" />
+            <h5>Mount Aspirin</h5>
+            <img id ="spec" src="images/specification.png" alt="specification" />
+            <p>$8,999<span>/person</span></p>
+          </div>
+          <div class="im3">
+            <img src="images/card3.png" alt="image3" />
+            <h5>Mount Rainier</h5>
+            <img id="spec" src="images/specification.png" alt="specification" />
+            <p>$9,999<span>/person</span></p>
+          </div>
+          <div class="im4">
+            <img src="images/card4.png" alt="image4" />
+            <h5>Rieserferner-Ahrn</h5>
+            <img id="spec" src="images/specification.png" alt="specification" />
+            <p>$7,999<span>/person</span></p>
           </div>
         </div>
       </div>
