--- a/index.html
+++ b/index.html
@@ -181,25 +181,32 @@
 
         <div class="images">
           <div class="im1">
-            <img src="images/card1.png" alt="image1" />
+            <img src="images/card1.png" alt="background" class="bg" />
+            <img src="images/location.png" alt="overlay" class="overlay" />
             <h5>Mount Everest</h5>
             <img id="spec" src="images/specification.png" alt="specification" />
             <p>$12,999<span>/person</span></p>
           </div>
           <div class="im2">
-            <img src="images/card2.png" alt="image2" />
+            <img src="images/card2.png" alt="background" class="bg" />
+            <img src="images/location.png" alt="overlay" class="overlay" />
+
             <h5>Mount Aspirin</h5>
-            <img id ="spec" src="images/specification.png" alt="specification" />
+            <img id="spec" src="images/specification.png" alt="specification" />
             <p>$8,999<span>/person</span></p>
           </div>
           <div class="im3">
-            <img src="images/card3.png" alt="image3" />
+            <img src="images/card3.png" alt="background" class="bg" />
+            <img src="images/location.png" alt="overlay" class="overlay" />
+
             <h5>Mount Rainier</h5>
             <img id="spec" src="images/specification.png" alt="specification" />
             <p>$9,999<span>/person</span></p>
           </div>
           <div class="im4">
-            <img src="images/card4.png" alt="image4" />
+            <img src="images/card4.png" alt="background" class="bg" />
+            <img src="images/location.png" alt="overlay" class="overlay" />
+
             <h5>Rieserferner-Ahrn</h5>
             <img id="spec" src="images/specification.png" alt="specification" />
             <p>$7,999<span>/person</span></p>
