--- a/index.html
+++ b/index.html
@@ -213,6 +213,49 @@
           </div>
         </div>
       </div>
+
+      <div class="section4">
+        <div class="title">
+          <h4>HAPPY HIKERS</h4>
+          <h2>Client`s Say About Us</h2>
+          <p class="par">
+            These are things that clients who have used <br />
+            our features and works says.
+          </p>
+        </div>
+        <div class="user-feedback">
+          <div class="user1">
+            <img src="images/profile1.png" alt="profile1" />
+            <p class="par">
+              “Everyone working in the office is very knowledgeable about all
+              types of dental work and options for your individual needs.”
+            </p>
+            <h4>O`roqboy Ketmonov</h4>
+            <h5>Designer</h5>
+            <img src="images/rating.png" alt="rating" id="rating" />
+          </div>
+          <div class="user2">
+            <img src="images/profile2.png" alt="profile1" />
+            <p class="par">
+              “Everyone working in the office is very knowledgeable about all
+              types of dental work and options for your individual needs.”
+            </p>
+            <h4>Teshaboy Boltayev</h4>
+            <h5>Consultant</h5>
+            <img src="images/rating.png" alt="rating" id="rating" />
+          </div>
+          <div class="user3">
+            <img src="images/profile1.png" alt="profile1" />
+            <p  class="par">
+              “Everyone working in the office is very knowledgeable about all
+              types of dental work and options for your individual needs.”
+            </p>
+            <h4>Hasan Husanov</h4>
+            <h5>Manager</h5>
+            <img src="images/rating.png" alt="rating" id="rating" />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
