--- a/index.html
+++ b/index.html
@@ -230,32 +230,121 @@
               “Everyone working in the office is very knowledgeable about all
               types of dental work and options for your individual needs.”
             </p>
-            <h4>O`roqboy Ketmonov</h4>
-            <h5>Designer</h5>
-            <img src="images/rating.png" alt="rating" id="rating" />
+            <div class="rt">
+              <div class="info">
+                <h4>O`roqboy Ketmonov</h4>
+                <h5>Designer</h5>
+              </div>
+              <img src="images/rating.png" alt="rating" id="rating" />
+            </div>
           </div>
+
           <div class="user2">
             <img src="images/profile2.png" alt="profile1" />
             <p class="par">
               “Everyone working in the office is very knowledgeable about all
               types of dental work and options for your individual needs.”
             </p>
-            <h4>Teshaboy Boltayev</h4>
-            <h5>Consultant</h5>
-            <img src="images/rating.png" alt="rating" id="rating" />
+            <div class="rt">
+              <div class="info">
+                <h4>Teshaboy Boltayev</h4>
+                <h5>Consultant</h5>
+              </div>
+              <img src="images/rating.png" alt="rating" id="rating" />
+            </div>
           </div>
+
           <div class="user3">
             <img src="images/profile1.png" alt="profile1" />
-            <p  class="par">
+            <p class="par">
               “Everyone working in the office is very knowledgeable about all
               types of dental work and options for your individual needs.”
             </p>
-            <h4>Hasan Husanov</h4>
-            <h5>Manager</h5>
-            <img src="images/rating.png" alt="rating" id="rating" />
+            <div class="rt">
+              <div class="info">
+                <h4>Hasan Husanov</h4>
+                <h5>Manager</h5>
+              </div>
+              <img src="images/rating.png" alt="rating" id="rating" />
+            </div>
           </div>
         </div>
       </div>
+
+      <!-- Newsletter Section -->
+      <section class="newsletter">
+        <p class="small-text">GET CONNECT</p>
+        <h2>Subscribe to our newsletter</h2>
+        <p class="sub-text">
+          Get notification about tips, new product and exclusive promo news just
+          for you.
+        </p>
+        <div class="subscribe-box">
+          <input type="email" placeholder="Enter your email address" />
+          <button>Subscribe</button>
+        </div>
+      </section>
+
+      <!-- Footer Section -->
+      <footer class="footer">
+        <div class="footer-container">
+          <!-- Left: Logo + Text -->
+          <div class="footer-about">
+            <h3><span class="logo-icon">📍</span> Camps</h3>
+            <p>
+              We envision a world where everyone feels welcome in the American
+              hiking community and has permanent access to meaningful hiking.
+            </p>
+            <div class="socials">
+              <a href="#">🌐</a>
+              <a href="#">📸</a>
+              <a href="#">🐦</a>
+              <a href="#">▶️</a>
+            </div>
+          </div>
+
+          <!-- Links -->
+          <div class="footer-links">
+            <h4>Links</h4>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Schedule</a></li>
+              <li><a href="#">Book</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+
+          <!-- About -->
+          <div class="footer-about-links">
+            <h4>About</h4>
+            <ul>
+              <li><a href="#">Partners</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Community</a></li>
+            </ul>
+          </div>
+
+          <!-- Office -->
+          <div class="footer-office">
+            <h4>Our Office</h4>
+            <p>
+              Indonesia <br />
+              Jl. Griya Permata Hijau no D1 <br />
+              Purwomartani Kalasan 543881
+            </p>
+            <p>
+              Tokyo <br />
+              35 Mandalay Road 13-37 Mandalay Towers <br />
+              Singapore 308215
+            </p>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>© 2021 Camps All rights reserved.</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
