--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
     </section>
 
-    <div class="page2">
+    <section class="page2">
       <div class="title1">
         <h4>JUST FOR YOU</h4>
         <h2>Our Mission</h2>
@@ -138,9 +138,9 @@
           <a href="#">Read More</a>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="page3">
+    <section class="page3">
       <div class="image">
         <img src="images/people.png" alt="image1" />
       </div>
@@ -158,9 +158,9 @@
         </p>
         <button class="btn"><a href="#">Learn More</a></button>
       </div>
-    </div>
+    </section>
 
-    <div class="page4">
+    <section class="page4">
       <div class="title">
         <h4>WHATS NEXT?</h4>
         <h2>Explore Mountain</h2>
@@ -180,9 +180,9 @@
       <div class="image1">
         <img src="images/people2.png" alt="image2" />
       </div>
-    </div>
+    </section>
 
-    <div class="page5">
+    <section class="page5">
       <div class="title">
         <h4>WHERE TO GO?</h4>
         <h2>Explore Mountain</h2>
@@ -225,9 +225,9 @@
           <p>$7,999<span>/person</span></p>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="page6">
+    <section class="page6">
       <div class="title">
         <h4>HAPPY HIKERS</h4>
         <h2>Client`s Say About Us</h2>
@@ -282,7 +282,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Newsletter Section -->
     <section class="newsletter">
